<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/empty"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/play"
        android:layout_below="@id/highScoreTxt"
        android:layout_centerHorizontal="true"
        android:text="@string/i_have_to_fly"
        android:textColor="#1403FA"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/play"
        android:textColor="#F10924"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/highScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/high_score"
        android:textColor="#64ABE3"
        android:textSize="24sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/volumeCtrl"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/empty"
        app:srcCompat="@drawable/ic_volume_up_black_24dp" />


    <ImageView
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="669dp"
        android:layout_marginRight="669dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="630dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/ivExit"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/exit"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:contentDescription="@string/empty" />


</RelativeLayout>